Fix the alignment

--- a/src/Content/index.module.less
+++ b/src/Content/index.module.less
@@ -1,6 +1,6 @@
 .content {
     columns: 2;
-    padding: 12px 20px;
+    padding: 20px 20px;
     box-sizing: border-box;
     width: 100%;
     color: #4a4a4a;
@@ -12,6 +12,7 @@
         font-size: 20px;
         line-height: 36px;
         font-weight: bold;
+        margin-top: 0;
     }
 
     a {
